# MumpsWin

./: .gitignore  CMakeLists.txt  README.md
Mumps5.0.0/: CMakeLists.txt
Mumps5.1.1/: CMakeLists.txt
Mumps5.1.2/: CMakeLists.txt
MumpsProjects/: CMakeLists.txt
MumpsProjects/src/: c_example.c  mumps_project1.c
